Add function to animate trajectory.

--- a/test_animation.ipynb
+++ b/test_animation.ipynb
@@ -53,14 +53,14 @@
     "positions = np.array([xs, ys])\n",
     "\n",
     "# make sure save directory exists\n",
-    "if not os.path.exists('test_activity_anim'): os.makedirs('test_activity_anim')\n",
+    "if not os.path.exists('test_anim'): os.makedirs('test_anim')\n",
     "\n",
-    "data_t = shelve.open('test_activity_anim/test_time')\n",
+    "data_t = shelve.open('test_anim/timestamp')\n",
     "data_t['timestamps'] = ts\n",
     "data_t['fs'] = FS\n",
     "data_t.close()\n",
     "\n",
-    "data_a = shelve.open('test_activity_anim/test_activity')\n",
+    "data_a = shelve.open('test_anim/ntwk_activity')\n",
     "data_a['vs'] = vs\n",
     "data_a['spikes'] = spikes\n",
     "data_a['v_rest'] = V_REST\n",
@@ -97,8 +97,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using timestamp file \"test_activity_anim/test_time\" and activity file \"test_activity_anim/test_activity\".\n",
-      "Frames will be saved with prefix \"test_activity_anim/test_frames/frame\".\n",
+      "Using timestamp file \"test_anim/timestamp\" and activity file \"test_anim/ntwk_activity\".\n",
+      "Frames will be saved with prefix \"test_anim/ntwk_activity_frames/frame\".\n",
       "Loading timestamps and network activity data...\n",
       "Data loaded.\n",
       "Downsampling data from 1000 Hz to 30 fps...\n",
@@ -111,8 +111,8 @@
       "Gif generated.\n",
       "Deleting originals...\n",
       "Originals deleted.\n",
-      "Using timestamp file \"test_activity_anim/test_time\" and activity file \"test_activity_anim/test_activity\".\n",
-      "Frames will be saved with prefix \"test_activity_anim/test_frames/frame\".\n",
+      "Using timestamp file \"test_anim/timestamp\" and activity file \"test_anim/ntwk_activity\".\n",
+      "Frames will be saved with prefix \"test_anim/ntwk_activity_frames/frame\".\n",
       "Loading timestamps and network activity data...\n",
       "Data loaded.\n",
       "Downsampling data from 1000 Hz to 60 fps...\n",
@@ -125,8 +125,8 @@
       "Gif generated.\n",
       "Deleting originals...\n",
       "Originals deleted.\n",
-      "Using timestamp file \"test_activity_anim/test_time\" and activity file \"test_activity_anim/test_activity\".\n",
-      "Frames will be saved with prefix \"test_activity_anim/test_frames/frame\".\n",
+      "Using timestamp file \"test_anim/timestamp\" and activity file \"test_anim/ntwk_activity\".\n",
+      "Frames will be saved with prefix \"test_anim/ntwk_activity_frames/frame\".\n",
       "Loading timestamps and network activity data...\n",
       "Data loaded.\n",
       "Downsampling data from 1000 Hz to 120 fps...\n",
@@ -139,8 +139,8 @@
       "Gif generated.\n",
       "Deleting originals...\n",
       "Originals deleted.\n",
-      "Using timestamp file \"test_activity_anim/test_time\" and activity file \"test_activity_anim/test_activity\".\n",
-      "Frames will be saved with prefix \"test_activity_anim/test_frames/frame\".\n",
+      "Using timestamp file \"test_anim/timestamp\" and activity file \"test_anim/ntwk_activity\".\n",
+      "Frames will be saved with prefix \"test_anim/ntwk_activity_frames/frame\".\n",
       "Loading timestamps and network activity data...\n",
       "Data loaded.\n",
       "Downsampling data from 1000 Hz to 30 fps...\n",
@@ -160,13 +160,13 @@
     "gifs = []\n",
     "\n",
     "for fps, playback_fps in zip(FPS, PLAYBACK_FPS):\n",
-    "    save_file_gif = 'test_activity_anim/test_anim_{}_fps_{}Hz_playback'.format(\n",
+    "    save_file_gif = 'test_anim/ntwk_activity_{}_fps_{}Hz_playback'.format(\n",
     "        fps, playback_fps)\n",
     "\n",
-    "    save_files = build_frames.network_activity(\n",
-    "        save_prefix='test_activity_anim/test_frames/frame',\n",
-    "        time_file='test_activity_anim/test_time',\n",
-    "        activity_file='test_activity_anim/test_activity',\n",
+    "    save_files = build_frames.ntwk_activity(\n",
+    "        save_prefix='test_anim/ntwk_activity_frames/frame',\n",
+    "        time_file='test_anim/timestamp',\n",
+    "        activity_file='test_anim/ntwk_activity',\n",
     "        fps=fps,\n",
     "        frames_per_spike=5,\n",
     "        verbose=True)\n",
@@ -185,33 +185,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_activity_anim/test_anim_30_fps_15Hz_playback.gif\n"
+      "test_anim/ntwk_activity_30_fps_30Hz_playback.gif\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<img src=\"test_activity_anim/test_anim_30_fps_15Hz_playback.gif\" />"
+       "<img src=\"test_anim/ntwk_activity_30_fps_30Hz_playback.gif\" />"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(gif)\n",
-    "display.HTML('<img src=\"{}\" />'.format(gif))"
+    "from IPython import display\n",
+    "\n",
+    "print(gifs[0])\n",
+    "display.HTML('<img src=\"{}\" />'.format(gifs[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create position sequence for trajectory animation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.ndimage import gaussian_filter1d\n",
+    "\n",
+    "STD = 1\n",
+    "SMOOTHING = 200\n",
+    "SEED = 0\n",
+    "\n",
+    "np.random.seed(SEED)\n",
+    "\n",
+    "# make random x and y position sequences\n",
+    "xys = STD * np.random.randn(len(ts), 2)\n",
+    "# smooth them\n",
+    "xys = gaussian_filter1d(xys, SMOOTHING, axis=0)\n",
+    "\n",
+    "# make sure save directory exists\n",
+    "if not os.path.exists('test_anim'): os.makedirs('test_anim')\n",
+    "\n",
+    "# save traj file\n",
+    "data_tr = shelve.open('test_anim/traj')\n",
+    "data_tr['xys'] = xys\n",
+    "data_tr.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Build frames and gif"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "FPS = [30, 60, 120, 30]\n",
+    "PLAYBACK_FPS = [30, 30, 30, 15]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading source images...\n",
+      "Source images loaded.\n",
+      "Generating gif...\n",
+      "Gif generated.\n",
+      "Deleting originals...\n",
+      "Originals deleted.\n",
+      "Loading source images...\n",
+      "Source images loaded.\n",
+      "Generating gif...\n",
+      "Gif generated.\n",
+      "Deleting originals...\n",
+      "Originals deleted.\n",
+      "Loading source images...\n",
+      "Source images loaded.\n",
+      "Generating gif...\n",
+      "Gif generated.\n",
+      "Deleting originals...\n",
+      "Originals deleted.\n",
+      "Loading source images...\n",
+      "Source images loaded.\n",
+      "Generating gif...\n",
+      "Gif generated.\n",
+      "Deleting originals...\n",
+      "Originals deleted.\n"
+     ]
+    }
+   ],
+   "source": [
+    "gifs = []\n",
+    "\n",
+    "for fps, playback_fps in zip(FPS, PLAYBACK_FPS):\n",
+    "    save_file_gif = 'test_anim/traj_{}_fps_{}Hz_playback'.format(\n",
+    "        fps, playback_fps)\n",
+    "\n",
+    "    save_files = build_frames.traj(\n",
+    "        save_prefix='test_anim/traj_frames/frame',\n",
+    "        time_file='test_anim/timestamp',\n",
+    "        traj_file='test_anim/traj',\n",
+    "        fps=fps,\n",
+    "        verbose=True)\n",
+    "\n",
+    "    gifs.append(create_gif(\n",
+    "        save_files, save_file=save_file_gif,\n",
+    "        playback_fps=playback_fps, delete_originals=True, verbose=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_anim/traj_30_fps_30Hz_playback.gif\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"test_anim/traj_30_fps_30Hz_playback.gif\" />"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(gifs[0])\n",
+    "display.HTML('<img src=\"{}\" />'.format(gifs[0]))"
    ]
   }
  ],
