--- a/test_animation.ipynb
+++ b/test_animation.ipynb
@@ -1,17 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from animation import build_frames, create_gif"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,12 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "from animation import build_frames, merge_frames, create_gif\n",
+    "from copy import copy\n",
     "import numpy as np\n",
     "import os\n",
     "import shelve\n",
@@ -78,19 +69,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "FPS = [30, 60, 120, 30]\n",
-    "PLAYBACK_FPS = [30, 30, 30, 15]"
+    "FPS = [30, 120, 60, 30]\n",
+    "PLAYBACK_FPS = [15, 30, 30, 30]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -109,22 +100,6 @@
       "Source images loaded.\n",
       "Generating gif...\n",
       "Gif generated.\n",
-      "Deleting originals...\n",
-      "Originals deleted.\n",
-      "Using timestamp file \"test_anim/timestamp\" and activity file \"test_anim/ntwk_activity\".\n",
-      "Frames will be saved with prefix \"test_anim/ntwk_activity_frames/frame\".\n",
-      "Loading timestamps and network activity data...\n",
-      "Data loaded.\n",
-      "Downsampling data from 1000 Hz to 60 fps...\n",
-      "Data downsampled.\n",
-      "Generating and saving 120 frames...\n",
-      "Frames saved.\n",
-      "Loading source images...\n",
-      "Source images loaded.\n",
-      "Generating gif...\n",
-      "Gif generated.\n",
-      "Deleting originals...\n",
-      "Originals deleted.\n",
       "Using timestamp file \"test_anim/timestamp\" and activity file \"test_anim/ntwk_activity\".\n",
       "Frames will be saved with prefix \"test_anim/ntwk_activity_frames/frame\".\n",
       "Loading timestamps and network activity data...\n",
@@ -137,8 +112,18 @@
       "Source images loaded.\n",
       "Generating gif...\n",
       "Gif generated.\n",
-      "Deleting originals...\n",
-      "Originals deleted.\n",
+      "Using timestamp file \"test_anim/timestamp\" and activity file \"test_anim/ntwk_activity\".\n",
+      "Frames will be saved with prefix \"test_anim/ntwk_activity_frames/frame\".\n",
+      "Loading timestamps and network activity data...\n",
+      "Data loaded.\n",
+      "Downsampling data from 1000 Hz to 60 fps...\n",
+      "Data downsampled.\n",
+      "Generating and saving 120 frames...\n",
+      "Frames saved.\n",
+      "Loading source images...\n",
+      "Source images loaded.\n",
+      "Generating gif...\n",
+      "Gif generated.\n",
       "Using timestamp file \"test_anim/timestamp\" and activity file \"test_anim/ntwk_activity\".\n",
       "Frames will be saved with prefix \"test_anim/ntwk_activity_frames/frame\".\n",
       "Loading timestamps and network activity data...\n",
@@ -150,15 +135,11 @@
       "Loading source images...\n",
       "Source images loaded.\n",
       "Generating gif...\n",
-      "Gif generated.\n",
-      "Deleting originals...\n",
-      "Originals deleted.\n"
+      "Gif generated.\n"
      ]
     }
    ],
    "source": [
-    "gifs = []\n",
-    "\n",
     "for fps, playback_fps in zip(FPS, PLAYBACK_FPS):\n",
     "    save_file_gif = 'test_anim/ntwk_activity_{}_fps_{}Hz_playback'.format(\n",
     "        fps, playback_fps)\n",
@@ -170,10 +151,13 @@
     "        fps=fps,\n",
     "        frames_per_spike=5,\n",
     "        verbose=True)\n",
-    "\n",
-    "    gifs.append(create_gif(\n",
+    "    \n",
+    "    gif = create_gif(\n",
     "        save_files, save_file=save_file_gif,\n",
-    "        playback_fps=playback_fps, delete_originals=True, verbose=True))"
+    "        playback_fps=playback_fps, verbose=True)\n",
+    "\n",
+    "save_files_ntwk = copy(save_files)\n",
+    "gif_ntwk = gif"
    ]
   },
   {
@@ -185,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +188,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,8 +196,8 @@
    "source": [
     "from IPython import display\n",
     "\n",
-    "print(gifs[0])\n",
-    "display.HTML('<img src=\"{}\" />'.format(gifs[0]))"
+    "print(gif_ntwk)\n",
+    "display.HTML('<img src=\"{}\" />'.format(gif_ntwk))"
    ]
   },
   {
@@ -225,8 +209,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from scipy.ndimage import gaussian_filter1d\n",
@@ -260,20 +246,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "scrolled": false
    },
-   "outputs": [],
-   "source": [
-    "FPS = [30, 60, 120, 30]\n",
-    "PLAYBACK_FPS = [30, 30, 30, 15]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -283,32 +259,22 @@
       "Source images loaded.\n",
       "Generating gif...\n",
       "Gif generated.\n",
-      "Deleting originals...\n",
-      "Originals deleted.\n",
       "Loading source images...\n",
       "Source images loaded.\n",
       "Generating gif...\n",
       "Gif generated.\n",
-      "Deleting originals...\n",
-      "Originals deleted.\n",
       "Loading source images...\n",
       "Source images loaded.\n",
       "Generating gif...\n",
       "Gif generated.\n",
-      "Deleting originals...\n",
-      "Originals deleted.\n",
       "Loading source images...\n",
       "Source images loaded.\n",
       "Generating gif...\n",
-      "Gif generated.\n",
-      "Deleting originals...\n",
-      "Originals deleted.\n"
+      "Gif generated.\n"
      ]
     }
    ],
    "source": [
-    "gifs = []\n",
-    "\n",
     "for fps, playback_fps in zip(FPS, PLAYBACK_FPS):\n",
     "    save_file_gif = 'test_anim/traj_{}_fps_{}Hz_playback'.format(\n",
     "        fps, playback_fps)\n",
@@ -320,14 +286,17 @@
     "        fps=fps,\n",
     "        verbose=True)\n",
     "\n",
-    "    gifs.append(create_gif(\n",
+    "    gif = create_gif(\n",
     "        save_files, save_file=save_file_gif,\n",
-    "        playback_fps=playback_fps, delete_originals=True, verbose=True))"
+    "        playback_fps=playback_fps, verbose=True)\n",
+    "\n",
+    "save_files_traj = copy(save_files)\n",
+    "gif_traj = gif"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -346,14 +315,78 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(gifs[0])\n",
-    "display.HTML('<img src=\"{}\" />'.format(gifs[0]))"
+    "print(gif_traj)\n",
+    "display.HTML('<img src=\"{}\" />'.format(gif_traj))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create merged frames and gif"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading source images...\n",
+      "Source images loaded.\n",
+      "Generating gif...\n",
+      "Gif generated.\n"
+     ]
+    }
+   ],
+   "source": [
+    "save_prefix = 'test_anim/merged_frames/frame'\n",
+    "rects = [(0, 0, 432, 288), (432, 0, 864, 288)]\n",
+    "size = (864, 288)\n",
+    "\n",
+    "merged_frames = merge_frames([save_files_ntwk, save_files_traj], save_prefix, rects, size)\n",
+    "\n",
+    "gif_merged = create_gif(merged_frames, 'test_anim/merged', playback_fps=30, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_anim/merged.gif\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"test_anim/merged.gif\" />"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(gif_merged)\n",
+    "display.HTML('<img src=\"{}\" />'.format(gif_merged))"
    ]
   }
  ],
