Update frame-merging function so that sizes are relative to image, instead of in pixels.

--- a/test_anim.ipynb
+++ b/test_anim.ipynb
@@ -15,7 +15,7 @@
    },
    "outputs": [],
    "source": [
-    "from animation import build_frames, merge_frames, create_gif\n",
+    "from anim import build_frames, merge_frames, create_gif\n",
     "from copy import copy\n",
     "import numpy as np\n",
     "import os\n",
@@ -349,9 +349,11 @@
     }
    ],
    "source": [
+    "import pdb\n",
+    "\n",
     "save_prefix = 'test_anim/merged_frames/frame'\n",
-    "rects = [(0, 0, 432, 288), (432, 0, 864, 288)]\n",
-    "size = (864, 288)\n",
+    "rects = [(0, 0, 1, 1), (1, 0, 2, 1)]\n",
+    "size = (2, 1)\n",
     "\n",
     "merged_frames = merge_frames([save_files_ntwk, save_files_traj], save_prefix, rects, size)\n",
     "\n",
@@ -360,8 +362,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -379,7 +383,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
