Add titles, labels, and increase fontsize.

--- a/test_anim.ipynb
+++ b/test_anim.ipynb
@@ -150,6 +150,10 @@
     "        activity_file='test_anim/ntwk_activity',\n",
     "        fps=fps,\n",
     "        frames_per_spike=5,\n",
+    "        title='Network activity',\n",
+    "        x_label='x (m)',\n",
+    "        y_label='y (m)',\n",
+    "        fig_size=(10, 7),\n",
     "        verbose=True)\n",
     "    \n",
     "    gif = create_gif(\n",
@@ -284,6 +288,10 @@
     "        time_file='test_anim/timestamp',\n",
     "        traj_file='test_anim/traj',\n",
     "        fps=fps,\n",
+    "        title='Trajectory through space',\n",
+    "        x_label='x (m)',\n",
+    "        y_label='y (m)',\n",
+    "        fig_size=(10, 7),\n",
     "        verbose=True)\n",
     "\n",
     "    gif = create_gif(\n",
@@ -349,8 +357,6 @@
     }
    ],
    "source": [
-    "import pdb\n",
-    "\n",
     "save_prefix = 'test_anim/merged_frames/frame'\n",
     "rects = [(0, 0, 1, 1), (1, 0, 2, 1)]\n",
     "size = (2, 1)\n",
