Use NtwkResponse object to save network.

--- a/test_anim.ipynb
+++ b/test_anim.ipynb
@@ -10,16 +10,28 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'test_anim/ntwk_activity'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from anim import build_frames, merge_frames, create_gif\n",
     "from copy import copy\n",
     "import numpy as np\n",
     "import os\n",
     "import shelve\n",
+    "\n",
+    "from ntwk import NtwkResponse\n",
+    "from sim import save_time_file\n",
     "\n",
     "DUR = 2\n",
     "FS = 1000\n",
@@ -31,33 +43,24 @@
     "\n",
     "ts = np.linspace(0, DUR, FS * DUR, endpoint=False)\n",
     "vs = V_REST * np.ones((len(ts), len(STARTS)))\n",
-    "spikes = np.zeros(vs.shape, dtype=bool)\n",
+    "spks = np.zeros(vs.shape, dtype=bool)\n",
     "\n",
     "for neur, start in enumerate(STARTS):\n",
     "    for offset in [0, 1000]:\n",
     "        vs[offset+start:offset+start+ITVL, neur] = np.linspace(V_REST, V_TH, ITVL)\n",
-    "        spikes[offset+start+ITVL, neur] = True\n",
+    "        spks[offset+start+ITVL, neur] = True\n",
     "        \n",
     "xs = np.arange(len(STARTS))\n",
     "ys = np.arange(len(STARTS))\n",
     "\n",
     "positions = np.array([xs, ys])\n",
     "\n",
-    "# make sure save directory exists\n",
-    "if not os.path.exists('test_anim'): os.makedirs('test_anim')\n",
-    "\n",
-    "data_t = shelve.open('test_anim/timestamp')\n",
-    "data_t['timestamps'] = ts\n",
-    "data_t['fs'] = FS\n",
-    "data_t.close()\n",
-    "\n",
-    "data_a = shelve.open('test_anim/ntwk_activity')\n",
-    "data_a['vs'] = vs\n",
-    "data_a['spikes'] = spikes\n",
-    "data_a['v_rest'] = V_REST\n",
-    "data_a['v_th'] = V_TH\n",
-    "data_a['positions'] = positions\n",
-    "data_a.close()"
+    "# save everything\n",
+    "save_time_file('test_anim/time', ts)\n",
+    "ntwk_response = NtwkResponse(\n",
+    "    vs, spks, V_REST, V_TH,\n",
+    "    gs=None, ws_rcr=None, ws_up=None, positions=positions)\n",
+    "ntwk_response.save('test_anim/ntwk_activity')"
    ]
   },
   {
@@ -88,11 +91,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using timestamp file \"test_anim/timestamp\" and activity file \"test_anim/ntwk_activity\".\n",
+      "Using timestamp file \"test_anim/time\" and activity file \"test_anim/ntwk_activity\".\n",
       "Frames will be saved with prefix \"test_anim/ntwk_activity_frames/frame\".\n",
       "Loading timestamps and network activity data...\n",
       "Data loaded.\n",
-      "Downsampling data from 1000 Hz to 30 fps...\n",
+      "Downsampling data from 1000.0 Hz to 30 fps...\n",
       "Data downsampled.\n",
       "Generating and saving 60 frames...\n",
       "Frames saved.\n",
@@ -100,11 +103,11 @@
       "Source images loaded.\n",
       "Generating gif...\n",
       "Gif generated.\n",
-      "Using timestamp file \"test_anim/timestamp\" and activity file \"test_anim/ntwk_activity\".\n",
+      "Using timestamp file \"test_anim/time\" and activity file \"test_anim/ntwk_activity\".\n",
       "Frames will be saved with prefix \"test_anim/ntwk_activity_frames/frame\".\n",
       "Loading timestamps and network activity data...\n",
       "Data loaded.\n",
-      "Downsampling data from 1000 Hz to 120 fps...\n",
+      "Downsampling data from 1000.0 Hz to 120 fps...\n",
       "Data downsampled.\n",
       "Generating and saving 240 frames...\n",
       "Frames saved.\n",
@@ -112,11 +115,11 @@
       "Source images loaded.\n",
       "Generating gif...\n",
       "Gif generated.\n",
-      "Using timestamp file \"test_anim/timestamp\" and activity file \"test_anim/ntwk_activity\".\n",
+      "Using timestamp file \"test_anim/time\" and activity file \"test_anim/ntwk_activity\".\n",
       "Frames will be saved with prefix \"test_anim/ntwk_activity_frames/frame\".\n",
       "Loading timestamps and network activity data...\n",
       "Data loaded.\n",
-      "Downsampling data from 1000 Hz to 60 fps...\n",
+      "Downsampling data from 1000.0 Hz to 60 fps...\n",
       "Data downsampled.\n",
       "Generating and saving 120 frames...\n",
       "Frames saved.\n",
@@ -124,11 +127,11 @@
       "Source images loaded.\n",
       "Generating gif...\n",
       "Gif generated.\n",
-      "Using timestamp file \"test_anim/timestamp\" and activity file \"test_anim/ntwk_activity\".\n",
+      "Using timestamp file \"test_anim/time\" and activity file \"test_anim/ntwk_activity\".\n",
       "Frames will be saved with prefix \"test_anim/ntwk_activity_frames/frame\".\n",
       "Loading timestamps and network activity data...\n",
       "Data loaded.\n",
-      "Downsampling data from 1000 Hz to 30 fps...\n",
+      "Downsampling data from 1000.0 Hz to 30 fps...\n",
       "Data downsampled.\n",
       "Generating and saving 60 frames...\n",
       "Frames saved.\n",
@@ -146,7 +149,7 @@
     "\n",
     "    save_files = build_frames.ntwk_activity(\n",
     "        save_prefix='test_anim/ntwk_activity_frames/frame',\n",
-    "        time_file='test_anim/timestamp',\n",
+    "        time_file='test_anim/time',\n",
     "        activity_file='test_anim/ntwk_activity',\n",
     "        fps=fps,\n",
     "        frames_per_spike=5,\n",
@@ -250,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -285,7 +288,7 @@
     "\n",
     "    save_files = build_frames.traj(\n",
     "        save_prefix='test_anim/traj_frames/frame',\n",
-    "        time_file='test_anim/timestamp',\n",
+    "        time_file='test_anim/time',\n",
     "        traj_file='test_anim/traj',\n",
     "        fps=fps,\n",
     "        title='Trajectory through space',\n",
@@ -304,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +326,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -389,7 +392,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
