Fill in some rationales for parameter value choices.

--- a/parameters.ipynb
+++ b/parameters.ipynb
@@ -15,18 +15,18 @@
     "\n",
     "| symbol | variable | meaning | value | units | rationale |\n",
     "|:-------|:---------|:--------|------:|:------|:----------|\n",
-    "|$\\lambda^{PL}$|`L_PL`|place field width|70|cm||\n",
-    "|$r^{PL}_{max}$|`R_MAX_PL`|maximum place-tuned synaptic input rate onto CA3 cells|1000|Hz||\n",
-    "|$BOX_{l}$|`BOX_L`|left box bound|-3|m||\n",
-    "|$BOX_{r}$|`BOX_R`|right box bound|3|m||\n",
-    "|$BOX_{b}$|`BOX_B`|bottom box bound|-3|m||\n",
-    "|$BOX_{t}$|`BOX_T`|top box bound|3|m||\n",
-    "|$s_{trj}$|`S_TRJ`|trajectory average speed|1|m/s||\n",
-    "|$\\tau_{trj}$|`T_TRJ`|trajectory correlation time|1|s||\n",
-    "|$x_0$|`X_0`|initial $x$ position|-2.5|m||\n",
-    "|$y_0$|`Y_0`|initial $y$ position|-2.5|m||\n",
-    "|$v^x_0$|`VX_0`|initial $x$ velocity|0.35|m/s||\n",
-    "|$v^y_0$|`VY_0`|initial $y$ velocity|0.35|m/s||"
+    "|$\\lambda^{PL}$|`L_PL`|place field radius|20|cm|calculated for circular place-field with 1275cm^2 area as measured in Mizuseki et al., (2012)|\n",
+    "|$r^{PL}_{max}$|`R_MAX_PL`|maximum place-tuned synaptic input rate onto CA3 cells|?|Hz|calculated to yield ~20 Hz max firing rate when rat is at place field center (as measured by Mizuseki et al., (2012) Fig 4)|\n",
+    "|$BOX_{l}$|`BOX_L`|left box bound|-1|m|open-field dimensions used in Mizuseki et al., (2012)|\n",
+    "|$BOX_{r}$|`BOX_R`|right box bound|1|m|open-field dimensions used in Mizuseki et al., (2012)|\n",
+    "|$BOX_{b}$|`BOX_B`|bottom box bound|-0.5|m|open-field dimensions used in Mizuseki et al., (2012)|\n",
+    "|$BOX_{t}$|`BOX_T`|top box bound|0.5|m|open-field dimensions used in Mizuseki et al., (2012)|\n",
+    "|$s_{trj}$|`S_TRJ`|trajectory average speed|20|cm/s|chosen so that it takes ~2s for rat to cross place field|\n",
+    "|$\\tau_{trj}$|`T_TRJ`|trajectory correlation time|1|s|seems like right order of magnitude|\n",
+    "|$x_0$|`X_0`|initial $x$ position|?|m||\n",
+    "|$y_0$|`Y_0`|initial $y$ position|?|m||\n",
+    "|$v^x_0$|`VX_0`|initial $x$ velocity|?|m/s||\n",
+    "|$v^y_0$|`VY_0`|initial $y$ velocity|?|m/s||"
    ]
   },
   {
@@ -45,9 +45,9 @@
     "|$p_N^{EC-CA3}$|`P_N_EC_CA3`|NMDA cxn prob for EC->CA3 cxns|1|%||\n",
     "|$w_A^{CA3-CA3}$|`W_A_CA3_CA3`|AMPA cxn weight for CA3-CA3 recurrent cxns|0|-||\n",
     "|$w_N^{CA3-CA3}$|`W_N_CA3_CA3`|NMDA cxn weight for CA3-CA3 recurrent cxns|0|-||\n",
-    "|$w_A^{EC-CA3}$|`W_A_EC_CA3`|AMPA cxn weight for EC->CA3 cxns|0|-||\n",
+    "|$w_A^{EC-CA3}$|`W_A_EC_CA3`|initial AMPA cxn weight for EC->CA3 cxns|?|-|chosen to yield the ~ 2 mV EC-CA3 (perforant path) EPSPs measured in Hyun et al., 2015 Fig 1Ab|\n",
     "|$w_N^{EC-CA3}$|`W_N_EC_CA3`|NMDA cxn weight for EC->CA3 cxns|0|-||\n",
-    "|$w_A^{PL-CA3}$|`W_A_PL_CA3`|AMPA cxn weight for place-tuned neurons onto CA3|0.04|-||\n",
+    "|$w_A^{PL-CA3}$|`W_A_PL_CA3`|AMPA cxn weight for place-tuned neurons onto CA3|0.017|-|chosen to yield the ~ 4 mV MF-CA3 EPSPs measured in Hyun et al., 2015 Fig 1Ab (though note that we are ignoring the strong short-term facilitation typically seen at these synapses, since our primary goal is only to provide place-tuned input to the CA3 PCS)|\n",
     "|$w_N^{PL-CA3}$|`W_N_PL_CA3`|NMDA cxn weight for place-tuned neurons onto CA3|0|-||"
    ]
   },
@@ -59,11 +59,11 @@
     "\n",
     "| symbol | variable | meaning | value | units | rationale |\n",
     "|:-------|:---------|:--------|------:|:------|:----------|\n",
-    "|$v_{rest}$|`V_REST`|single-unit resting potential|-70|mV||\n",
-    "|$v_{th}$|`V_TH`|single-unit firing threshold|-36|mV||\n",
-    "|$v_{reset}$|`V_RESET`|reset potential|-70|mV||\n",
-    "|$\\tau_m$|`T_M`|membrane time constant|20|ms||\n",
-    "|$\\tau_r$|`T_R`|refractory period|2|ms||"
+    "|$v_{rest}$|`V_REST`|single-unit resting potential|-68|mV|directly measured in Guzman et al., (2016)|\n",
+    "|$v_{th}$|`V_TH`|single-unit firing threshold|-36|mV|directly measured in Guzman et al., (2016)|\n",
+    "|$v_{reset}$|`V_RESET`|reset potential|-68|mV|same as resting|\n",
+    "|$\\tau_m$|`T_M`|membrane time constant|50|ms|directly measured in Kowalski 2015|\n",
+    "|$\\tau_r$|`T_R`|refractory period|2|ms|typical absolute refractory period value|"
    ]
   },
   {
@@ -74,13 +74,13 @@
     "\n",
     "| symbol | variable | meaning | value | units | rationale |\n",
     "|:-------|:---------|:--------|------:|:------|:----------|\n",
-    "|$E_{leak}$|`E_LEAK`|leak reversal potential|-70|mV||\n",
-    "|$E_{AMPA}$|`E_AMPA`|AMPA reversal potential|0|mV||\n",
-    "|$E_{NMDA}$|`E_NMDA`|NMDA reversal potential|0|mV||\n",
-    "|$E_{GABA}$|`E_GABA`|GABA reversal potential|-80|mV||\n",
-    "|$\\tau_{AMPA}$|`T_AMPA`|AMPA conductance decay time|1|ms||\n",
-    "|$\\tau_{NMDA}$|`T_NMDA`|NMDA conductance decay time|20|ms||\n",
-    "|$\\tau_{GABA}$|`T_GABA`|GABA conductance decay time|1|ms||"
+    "|$E_{leak}$|`E_LEAK`|leak reversal potential|-68|mV|same as resting|\n",
+    "|$E_{AMPA}$|`E_AMPA`|AMPA reversal potential|0|mV|taken from Huang 2015|\n",
+    "|$E_{NMDA}$|`E_NMDA`|NMDA reversal potential|0|mV|taken from Huang 2015|\n",
+    "|$E_{GABA}$|`E_GABA`|GABA reversal potential|-80|mV|taken from Huang 2015|\n",
+    "|$\\tau_{AMPA}$|`T_AMPA`|AMPA conductance decay time|2|ms|taken from Huang 2015|\n",
+    "|$\\tau_{NMDA}$|`T_NMDA`|NMDA conductance decay time|?|ms||\n",
+    "|$\\tau_{GABA}$|`T_GABA`|GABA conductance decay time|?|ms||"
    ]
   },
   {
