Add in values for EC-CA3 plasticity parameters.

--- a/parameters.ipynb
+++ b/parameters.ipynb
@@ -45,7 +45,8 @@
     "|$p_N^{EC-CA3}$|`P_N_EC_CA3`|NMDA cxn prob for EC->CA3 cxns|1|%||\n",
     "|$w_A^{CA3-CA3}$|`W_A_CA3_CA3`|AMPA cxn weight for CA3-CA3 recurrent cxns|0|-||\n",
     "|$w_N^{CA3-CA3}$|`W_N_CA3_CA3`|NMDA cxn weight for CA3-CA3 recurrent cxns|0|-||\n",
-    "|$w_A^{EC-CA3}$|`W_A_EC_CA3`|initial AMPA cxn weight for EC->CA3 cxns|?|-|chosen to yield the ~ 2 mV EC-CA3 (perforant path) EPSPs measured in Hyun et al., 2015 Fig 1Ab|\n",
+    "|$w_A^{EC-CA3,i}$|`W_A_EC_CA3_I`|initial AMPA cxn weight for EC->CA3 cxns|?|-|chosen to yield the ~ 2 mV EC-CA3 (perforant path) EPSPs measured in Hyun et al., 2015 Fig 1Ab|\n",
+    "|$w_A^{EC-CA3,f}$|`W_A_EC_CA3_F`|final AMPA cxn weight for EC->CA3 cxns|?|-|chosen to yield the ~ 4 mV EC-CA3 (perforant path) EPSPs measured in Hyun et al., 2015 Fig 1Ab|\n",
     "|$w_N^{EC-CA3}$|`W_N_EC_CA3`|NMDA cxn weight for EC->CA3 cxns|0|-||\n",
     "|$w_A^{PL-CA3}$|`W_A_PL_CA3`|AMPA cxn weight for place-tuned neurons onto CA3|0.017|-|chosen to yield the ~ 4 mV MF-CA3 EPSPs measured in Hyun et al., 2015 Fig 1Ab (though note that we are ignoring the strong short-term facilitation typically seen at these synapses, since our primary goal is only to provide place-tuned input to the CA3 PCS)|\n",
     "|$w_N^{PL-CA3}$|`W_N_PL_CA3`|NMDA cxn weight for place-tuned neurons onto CA3|0|-||"
@@ -91,11 +92,10 @@
     "\n",
     "| symbol | variable | meaning | value | units | rationale |\n",
     "|:-------|:---------|:--------|------:|:------|:----------|\n",
-    "|$\\tau_w$|`T_W`|timescale of activity-dependent EC-CA3 cxn weight increase|1|s||\n",
-    "|$w_{max}$|`W_MAX`|maximum EC-CA3 cxn weight|0.08|-||\n",
-    "|$\\tau_c$|`T_C`|decay timescale of CA3 spike-counter variable|0.3|s||\n",
-    "|$c^*$|`C_S`|spike-counter threshold|5|-||\n",
-    "|$\\beta_c$|`BETA_C`|spike-counter nonlinearity slope|0.5|-||"
+    "|$\\tau_w$|`T_W`|timescale of activity-dependent EC-CA3 cxn weight increase|1|s|determined in [parameters_aux.ipynb](parameters_aux.ipynb)|\n",
+    "|$\\tau_c$|`T_C`|decay timescale of CA3 spike-counter variable|2|s|determined in [parameters_aux.ipynb](parameters_aux.ipynb)|\n",
+    "|$c^*$|`C_S`|spike-counter threshold|5|-|determined in [parameters_aux.ipynb](parameters_aux.ipynb)|\n",
+    "|$\\beta_c$|`BETA_C`|spike-counter nonlinearity slope|0.2|-|determined in [parameters_aux.ipynb](parameters_aux.ipynb)|"
    ]
   },
   {
