Calculate and store more parameter values.

--- a/parameters.ipynb
+++ b/parameters.ipynb
@@ -16,12 +16,12 @@
     "| symbol | variable | meaning | value | units | rationale |\n",
     "|:-------|:---------|:--------|------:|:------|:----------|\n",
     "|$\\lambda^{PL}$|`L_PL`|place field radius|20|cm|calculated for circular place-field with 1275cm^2 area as measured in Mizuseki et al., (2012)|\n",
-    "|$r^{PL}_{max}$|`R_MAX_PL`|maximum place-tuned synaptic input rate onto CA3 cells|?|Hz|calculated to yield ~20 Hz max firing rate when rat is at place field center (as measured by Mizuseki et al., (2012) Fig 4)|\n",
+    "|$r^{PL}_{max}$|`R_MAX_PL`|maximum place-tuned synaptic input rate onto CA3 cells|350|Hz|calculated to yield ~20 Hz max firing rate when rat is at place field center (as measured by Mizuseki et al., (2012) Fig 4)|\n",
     "|$BOX_{l}$|`BOX_L`|left box bound|-1|m|open-field dimensions used in Mizuseki et al., (2012)|\n",
     "|$BOX_{r}$|`BOX_R`|right box bound|1|m|open-field dimensions used in Mizuseki et al., (2012)|\n",
     "|$BOX_{b}$|`BOX_B`|bottom box bound|-0.5|m|open-field dimensions used in Mizuseki et al., (2012)|\n",
     "|$BOX_{t}$|`BOX_T`|top box bound|0.5|m|open-field dimensions used in Mizuseki et al., (2012)|\n",
-    "|$s_{trj}$|`S_TRJ`|trajectory average speed|20|cm/s|chosen so that it takes ~2s for rat to cross place field|\n",
+    "|$s_{trj}$|`S_TRJ`|trajectory average speed|20|cm/s|approximate mean of rat running velocity distributions in McNaughton, Barnes, and O'Keefe (1984)|\n",
     "|$\\tau_{trj}$|`T_TRJ`|trajectory correlation time|1|s|seems like right order of magnitude|\n",
     "|$x_0$|`X_0`|initial $x$ position|?|m||\n",
     "|$y_0$|`Y_0`|initial $y$ position|?|m||\n",
@@ -45,8 +45,8 @@
     "|$p_N^{EC-CA3}$|`P_N_EC_CA3`|NMDA cxn prob for EC->CA3 cxns|1|%||\n",
     "|$w_A^{CA3-CA3}$|`W_A_CA3_CA3`|AMPA cxn weight for CA3-CA3 recurrent cxns|0|-||\n",
     "|$w_N^{CA3-CA3}$|`W_N_CA3_CA3`|NMDA cxn weight for CA3-CA3 recurrent cxns|0|-||\n",
-    "|$w_A^{EC-CA3,i}$|`W_A_EC_CA3_I`|initial AMPA cxn weight for EC->CA3 cxns|?|-|chosen to yield the ~ 2 mV EC-CA3 (perforant path) EPSPs measured in Hyun et al., 2015 Fig 1Ab|\n",
-    "|$w_A^{EC-CA3,f}$|`W_A_EC_CA3_F`|final AMPA cxn weight for EC->CA3 cxns|?|-|chosen to yield the ~ 4 mV EC-CA3 (perforant path) EPSPs measured in Hyun et al., 2015 Fig 1Ab|\n",
+    "|$w_A^{EC-CA3,i}$|`W_A_EC_CA3_I`|initial AMPA cxn weight for EC->CA3 cxns|0.008|-|chosen to yield the ~ 2 mV EC-CA3 (perforant path) EPSPs measured in Hyun et al., 2015 Fig 1Ab|\n",
+    "|$w_A^{EC-CA3,f}$|`W_A_EC_CA3_F`|final AMPA cxn weight for EC->CA3 cxns|0.017|-|chosen to yield the ~ 4 mV EC-CA3 (perforant path) EPSPs measured in Hyun et al., 2015 Fig 1Ab|\n",
     "|$w_N^{EC-CA3}$|`W_N_EC_CA3`|NMDA cxn weight for EC->CA3 cxns|0|-||\n",
     "|$w_A^{PL-CA3}$|`W_A_PL_CA3`|AMPA cxn weight for place-tuned neurons onto CA3|0.017|-|chosen to yield the ~ 4 mV MF-CA3 EPSPs measured in Hyun et al., 2015 Fig 1Ab (though note that we are ignoring the strong short-term facilitation typically seen at these synapses, since our primary goal is only to provide place-tuned input to the CA3 PCS)|\n",
     "|$w_N^{PL-CA3}$|`W_N_PL_CA3`|NMDA cxn weight for place-tuned neurons onto CA3|0|-||"
@@ -93,7 +93,7 @@
     "| symbol | variable | meaning | value | units | rationale |\n",
     "|:-------|:---------|:--------|------:|:------|:----------|\n",
     "|$\\tau_w$|`T_W`|timescale of activity-dependent EC-CA3 cxn weight increase|1|s|determined in [parameters_aux.ipynb](parameters_aux.ipynb)|\n",
-    "|$\\tau_c$|`T_C`|decay timescale of CA3 spike-counter variable|2|s|determined in [parameters_aux.ipynb](parameters_aux.ipynb)|\n",
+    "|$\\tau_c$|`T_C`|decay timescale of CA3 spike-counter variable|1.5|s|determined in [parameters_aux.ipynb](parameters_aux.ipynb)|\n",
     "|$c^*$|`C_S`|spike-counter threshold|5|-|determined in [parameters_aux.ipynb](parameters_aux.ipynb)|\n",
     "|$\\beta_c$|`BETA_C`|spike-counter nonlinearity slope|0.2|-|determined in [parameters_aux.ipynb](parameters_aux.ipynb)|"
    ]
@@ -106,8 +106,8 @@
     "\n",
     "| symbol | variable | meaning | value | units | rationale |\n",
     "|:-------|:---------|:--------|------:|:------|:----------|\n",
-    "|$T^{TRJ}_{START}$|`T_TRJ_START`|start time of trajectory|1|s||\n",
-    "|$T^{TRJ}_{END}$|`T_TRJ_END`|end time of trajectory|11|s||\n",
+    "|$T^{TRAJ}_{START}$|`T_TRAJ_START`|start time of trajectory|1|s||\n",
+    "|$T^{TRAJ}_{END}$|`T_TRAJ_END`|end time of trajectory|11|s||\n",
     "|$\\Delta T$|`DT`|numerical integration time step|0.5|ms||"
    ]
   },
@@ -120,16 +120,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "V_REST = -0.07\n",
-      "V_TH = -0.36\n",
-      "V_RESET = -0.07\n"
+      "# PLACE-TUNING AND TRAJECTORY GENERATION\n",
+      "\n",
+      "L_PL = 0.2  # (m)\n",
+      "R_MAX_PL = 350  # (Hz)\n",
+      "\n",
+      "BOX_L = -1  # (m)\n",
+      "BOX_R = 1  # (m)\n",
+      "BOX_B = -0.5  # (m)\n",
+      "BOX_T = 0.5  # (m)\n",
+      "\n",
+      "S_TRJ = 0.2  # (m/s)\n",
+      "T_TRJ = 1  # (s)\n",
+      "\n",
+      "X_0 = -0.9  # (m)\n",
+      "Y_0 = -0.4  # (m)\n",
+      "VX_0 = 0.45  # (m/s)\n",
+      "VY_0 = 0.45  # (m/s)\n",
+      "\n",
+      "# NETWORK ARCHITECTURE\n",
+      "\n",
+      "N_CA3 = 1000\n",
+      "N_EC = 1000\n",
+      "\n",
+      "P_A_CA3_CA3 = 0.01\n",
+      "P_N_CA3_CA3 = 0.01\n",
+      "\n",
+      "P_A_EC_CA3 = 0.01\n",
+      "P_N_EC_CA3 = 0.01\n",
+      "\n",
+      "W_A_CA3_CA3 = 0\n",
+      "W_N_CA3_CA3 = 0\n",
+      "\n",
+      "W_A_EC_CA3_I = 0.008\n",
+      "W_A_EC_CA3_F = 0.017\n",
+      "\n",
+      "W_N_EC_CA3 = 0\n",
+      "\n",
+      "W_A_PL_CA3 = 0.017\n",
+      "W_N_PL_CA3 = 0\n",
+      "\n",
+      "# MEMBRANE POTENTIAL DYNAMICS\n",
+      "\n",
+      "V_REST = -0.068  # (V)\n",
+      "V_TH = -0.036  # (V)\n",
+      "V_RESET = -0.068  # (V)\n",
+      "T_M = 0.05  # (s)\n",
+      "T_R = 0.002  # (s)\n",
+      "\n",
+      "# SYNAPTIC CONDUCTANCE DYNAMICS\n",
+      "\n",
+      "E_LEAK = -0.068  # (V)\n",
+      "E_AMPA = 0  # (V)\n",
+      "E_NMDA = 0  # (V)\n",
+      "E_GABA = -0.08  # (V)\n",
+      "\n",
+      "T_AMPA = 0.002  # (V)\n",
+      "T_NMDA = None\n",
+      "T_GABA = None\n",
+      "\n",
+      "# EC-CA3 PLASTICITY\n",
+      "T_W = 1  # (s)\n",
+      "T_C = 1.5  # (s)\n",
+      "C_S = 5\n",
+      "BETA_C = 0.2\n",
+      "\n",
+      "# SIMULATION\n",
+      "\n",
+      "T_TRAJ_START = 1  # (s)\n",
+      "T_TRAJ_END = 11  # (s)\n",
+      "DT = 0.0005  # (s)\n"
      ]
     }
    ],
